Rewrote mapping of domains and busses into a virtual bus number to allow arbitrary bus numbers. Disabled domain support for __INTEL__. This should fix bug #1774

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23944 a95241bf-73f2-0310-859d-f6bbb57e9c96