src/add-ons/kernel/bus_managers/pci/pci_info.cpp
@@ -148,10 +148,14 @@ print_capabilities(const pci_info *info)
 static void
 print_info_basic(const pci_info *info, bool verbose)
 {
+	int domain;
+	uint8 bus;
+
+	__pci_resolve_virtual_bus(info->bus, &domain, &bus);
+
 	TRACE(("PCI: [dom %d, bus %2d] bus %3d, device %2d, function %2d: vendor %04x, device %04x, revision %02x\n",
-	// XXX this works only as long as PCI manager virtual bus mapping isn't changed:
-			(info->bus >> 5) /* domain */, (info->bus & 0x1f) /* bus */,
-			info->bus, info->device, info->function, info->vendor_id, info->device_id, info->revision));
+			domain, bus, info->bus /* virtual bus*/,
+			info->device, info->function, info->vendor_id, info->device_id, info->revision));
 	TRACE(("PCI:   class_base %02x, class_function %02x, class_api %02x\n",
 			info->class_base, info->class_sub, info->class_api));
 
